we are using the useCase  find() finfIndex() some() sread(..)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     
 
-
-
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <h1>Set Object, Includex,Some,Reduce,Find,FindIndex</h1><br>
+    <p> 1. Check user  with such name exists or not  <br>
+        2. Adding New Element to the Array <br>
+        3. Remove Duplicate Elements in the Array <br>
+        4. Concatenating Two Arrays</p>
+    <script src="main1.js"></script>
 </body>
 </html>
