--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         2. Adding New Element to the Array <br>
         3. Remove Duplicate Elements in the Array <br>
         4. Concatenating Two Arrays</p>
-    <script src="main1.js"></script>
+    <!-- <script src="01dsa.js"></script> -->
+    <script src="main.js"></script>
 </body>
 </html>
