--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         3. Remove Duplicate Elements in the Array <br>
         4. Concatenating Two Arrays</p>
     <!-- <script src="01dsa.js"></script> -->
-    <script src="main.js"></script>
+    <script src="01_Interview.js"></script>
 </body>
 </html>
